<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.florent37.diagonallayout.DiagonalLayout
        android:id="@+id/diagonalLayout"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:elevation="10dp"
        app:diagonal_angle="15"
        app:diagonal_direction="left"
        app:diagonal_position="bottom"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/login_bg" />

    </com.github.florent37.diagonallayout.DiagonalLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="215dp"
        android:elevation="11dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"
        app:civ_border_color="#50000000"
        app:civ_border_overlay="true"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/diagonalLayout"
        app:maxImageSize="76dp" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="App Name"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_app_logo" />

    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:ccp_hideNameCode="true"
        app:layout_constraintBottom_toBottomOf="@+id/et_phone_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_phone_no" />

    <View
        android:id="@+id/view_ccp"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/ccp"
        app:layout_constraintEnd_toEndOf="@+id/ccp"
        app:layout_constraintStart_toStartOf="@+id/ccp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_phone_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/lbl_hint_phone"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ccp"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/lbl_phone_login_description"
        android:textColor="#858585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_no" />

    <TextView
        android:id="@+id/tv_terms_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackground"
        android:padding="4dp"
        android:text="@string/lbl_terms_of_service"
        android:textColor="?colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/tv_privacy_policy"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/tv_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="?attr/selectableItemBackground"
        android:padding="4dp"
        android:text="@string/lbl_privacy_policy"
        android:textColor="?colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:text="@string/lbl_btn_verify_phone_number"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_phone_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="et_phone_no,view_ccp,ccp,tv_description" />

    <com.kyawhtut.firebasephoneauthlib.otp.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:itemCount="6"
        app:itemRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
        app:lineColor="?colorPrimary"
        app:viewType="rectangle" />

    <TextView
        android:id="@+id/tv_otp_code_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/lbl_verify_code_send_description"
        android:textColor="#A70505"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_error_outline_black_24dp"
        app:layout_constraintEnd_toEndOf="@+id/otp_view"
        app:layout_constraintStart_toStartOf="@+id/otp_view"
        app:layout_constraintTop_toBottomOf="@+id/otp_view" />

    <TextView
        android:id="@+id/tv_code_send_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/lbl_verify_code_send_description"
        android:textColor="#858585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp_code_error" />

    <Button
        android:id="@+id/btn_resend"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/lbl_btn_resend"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_code_send_description" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_otp_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="btn_resend,tv_code_send_description,otp_view" />

</androidx.constraintlayout.widget.ConstraintLayout>